--- a/SourceCode_and_Documentation/UserInfoProto/signin.html
+++ b/SourceCode_and_Documentation/UserInfoProto/signin.html
@@ -23,8 +23,7 @@
 					<div class="col-md-5">
 					</div>
 					<div class="col-md-7">
-						<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
-						<p><br></p>
+						<img alt="Bootstrap Image Preview" src="FullBodyGrin.png">
 					</div>
 				</div>
 			</div>
