Added Create Goal Button

--- a/SourceCode_and_Documentation/SettingsAndLogsProto/workouthistory.html
+++ b/SourceCode_and_Documentation/SettingsAndLogsProto/workouthistory.html
@@ -36,6 +36,7 @@
 		<div class="col-md-6">
 			<br>
 			 <a href="#" class="btn btn-info active btn-block" type="button">View Recommendation</a>
+			 <a href="#" class="btn btn-info active btn-block" type="button">Create Goal</a>
 		</div>
 	</div>
 	<div class="row">
