--- a/SourceCode_and_Documentation/GoalAndRecommendation/Goal/goal.html
+++ b/SourceCode_and_Documentation/GoalAndRecommendation/Goal/goal.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>New Goal</title>
-<link rel="stylesheet" href="goal.css">
+<link rel="stylesheet" href="css/goal.css">
 </head>
 <body>
 
