finished dashboard links

--- a/SourceCode_and_Documentation/DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html
+++ b/SourceCode_and_Documentation/DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html
@@ -24,10 +24,7 @@
 			</h3>
 			<div class="row">
 				<div class="col-md-2">
-
-					<button type="button" class="btn btn-danger">
-						Logout
-					</button>
+					<a href="../../../UserInfoProto/signin.html" class="btn btn-danger" role="button">Logout</a>
 				</div>
 				<div class="col-md-8">
 					<div class="carousel slide" id="carousel-467366">
@@ -79,10 +76,7 @@
 				<div class="col-md-1">
 				</div>
 				<div class="col-md-1">
-
-					<button type="button" class="btn btn-primary">
-						Settings
-					</button>
+					<a href="../../../SettingsAndLogsProto/settings.html" class="btn btn-primary" role="button">Settings</a>
 				</div>
 			</div>
 		</div>
@@ -118,12 +112,8 @@
 					20.3km 1hr 2mins
 				</div>
 			</div>
-			<button type="button" class="btn btn-block btn-outline-success">
-				Show All
-			</button>
-			<button type="button" class="btn btn-block btn-outline-success">
-				Plan New Workout
-			</button>
+			<a href="../../../GoalAndRecommendation/Recommendation/recommendation.html" class="btn btn-block btn-outline-success" role="button">See Recommendations</a>
+			<a href="../../../GoalAndRecommendation/Goal/goal.html" class="btn btn-block btn-outline-success" role="button">Plan New Goal</a>
 		</div>
 		<div class="col-md-1">
 		</div>
@@ -161,12 +151,8 @@
 					</div>
 				</div>
 			</div>
-			<button type="button" class="btn btn-block btn-outline-info">
-				Show All
-			</button>
-			<button type="button" class="btn btn-block btn-outline-info">
-				Log Previous Workout
-			</button>
+			<a href="../../../SettingsAndLogsProto/workoutHistory.html" class="btn btn-block btn-outline-info" role="button">Show All</a>
+			<a href="../../../NewWorkoutsAndSleep/newWorkout.html" class="btn btn-block btn-outline-info" role="button">Log Workout</a>
 		</div>
 		<div class="col-md-1">
 		</div>
@@ -204,12 +190,8 @@
 					</div>
 				</div>
 			</div>
-			<button type="button" class="btn btn-block btn-outline-primary" color=>
-				Show All
-			</button>
-			<button type="button" class="btn btn-block btn-outline-primary">
-				Log Sleep and Mental Health
-			</button>
+			<a href="../../../SettingsAndLogsProto/sleepHistory.html" class="btn btn-block btn-outline-primary" role="button">Show All</a>
+			<a href="../../../NewWorkoutsAndSleep/newSleep.html" class="btn btn-block btn-outline-primary" role="button">Log Sleep and Mental Health</a>
 		</div>
 		<div class="col-md-1">
 		</div>
