--- a/SourceCode_and_Documentation/GoalAndRecommendation/Goal/goal.html
+++ b/SourceCode_and_Documentation/GoalAndRecommendation/Goal/goal.html
@@ -23,8 +23,8 @@
     </tr>
   </table>
   </br>
-  <button type="button" class="btn" id="Cbtn">Cancel</button>
-  <button type="button" class="btn" >Save</button>
+  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button" id="Cbtn">Cancel</a>
+  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button">Save</a>
 </form>
 
 </body>
