--- a/SourceCode_and_Documentation/GoalAndRecommendation/Recommendation/recommendation.html
+++ b/SourceCode_and_Documentation/GoalAndRecommendation/Recommendation/recommendation.html
@@ -8,7 +8,7 @@
 
 <h1>Workout Recommendations</h1>
 <div id="top">
-  <button type="button" id="Bbtn">Back</button>
+  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button" id="Bbtn">Back</a>
   <div class="color" id="firstC"></div>
   <div class="status">Completed</div>
   <div class="color" id="secondC"></div>
@@ -22,21 +22,21 @@
     <p class="date" >Complete by: 03/01/2021</p>
     </br>
     <p>Run from UNSW to Bondi Beach</p>
-    <button type="button" class="Dbtn">Delete</button>
+    <a href="./recommendation.html" class="btn" role="button" type="button" id="Dbtn">Delete</a>
     </div>
     <div class="col" id="g2">Goal 2: Burn 500 calories 
     </br>
     <p class="date">Complete by: 15/03/2021</p>
     </br>
     <p>Cycle 16 km</p>
-    <button type="button" class="Dbtn">Delete</button>
+    <a href="./recommendation.html" class="btn" role="button" type="button" id="Dbtn">Delete</a>
     </div>
     <div class="col" id="g3">Goal 3: Burn 300 calories
     </br>
     <p class="date">Complete by: 16/02/2021</p>
     </br>
     <p>Run 5 km</p>
-    <button type="button" class="Dbtn">Delete</button>
+    <a href="./recommendation.html" class="btn" role="button" type="button" id="Dbtn">Delete</a>
     </div>
   </div>
 </body>
