--- a/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Map/map.html
+++ b/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Map/map.html
@@ -36,9 +36,7 @@
 				</div>
 				<div class="col-md-2">
 					<div class="buffer">
-						<button type="button" class="btn btn-success">
-							Go Back
-						</button>
+						<a href="../Individual_Run/run.html" class="btn btn-success" role="button">Go Back</a>
 					</div>
 					
 				</div>
