--- a/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Run/run.html
+++ b/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Run/run.html
@@ -52,6 +52,8 @@
 			</div>
 			
 		</div>
+		<a href="../Individual_Map/map.html" class="btn btn-primary" role="button">Map</a>
+		<a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn btn-primary" role="button">Back</a>
 	</div>
 </div>
 
