--- a/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html
+++ b/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html
@@ -15,6 +15,7 @@
     <link href="style.css" rel="stylesheet">
 
   </head>
+  <body>
   <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
@@ -53,9 +54,11 @@
 						<img alt="Weekly Sleep Graph" src="Graph.png" />
 					</div>
 				</div>
+				<a href="../../SettingsAndLogsProto/sleepHistory.html" class="btn btn-primary" role="button">Back</a>
 			</div>
 		</div>
 	</div>
+	</body>
 </div>
 
     <script src="js/jquery.min.js"></script>
