--- a/SourceCode_and_Documentation/SettingsAndLogsProto/settings.html
+++ b/SourceCode_and_Documentation/SettingsAndLogsProto/settings.html
@@ -22,7 +22,7 @@
 			<ul class="nav nav-pills">
 				<li class="nav-item">
           <br>
-					<a class="nav-link btn btn-primary" href="#">Dashboard</a>
+					<a class="nav-link btn btn-primary" href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html">Dashboard</a>
 				</li>
 			</ul>
 			<div class="page-header">
@@ -31,10 +31,10 @@
 					Settings
 				</h1>
 				<br>
-			</div> <a href="#" class="btn btn-secondary" type="button">Change My Stats</a> 
+			</div> <a href="../UserInfoProto/updateStats.html" class="btn btn-secondary" type="button">Update Height and Weight</a> 
       
       
-      <div> <br> <a href="#" class="btn btn-secondary" type="button">Change Email / Password</a> </div>
+      <div> <br> <a href="../DashboardAndEmailPasswordUpdate/EmailPasswordUpdate/src/update.html" class="btn btn-secondary" type="button">Change Email / Password</a> </div>
 		</div>
 	</div>
 </div>
