--- a/SourceCode_and_Documentation/SettingsAndLogsProto/sleepHistory.html
+++ b/SourceCode_and_Documentation/SettingsAndLogsProto/sleepHistory.html
@@ -22,7 +22,7 @@
 			<ul class="nav nav-pills">
 				<li class="nav-item">
 					<br>
-					<a class="nav-link btn btn-primary" href="#">Dashboard</a>
+					<a class="nav-link btn btn-primary" href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html">Dashboard</a>
 				</li>
 			</ul>
 			<div class="page-header">
@@ -70,7 +70,7 @@
 							  </svg>
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 					<tr class="table-active">
@@ -87,7 +87,7 @@
 							  </svg>
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 					<tr class="table">
@@ -104,7 +104,7 @@
 							  </svg>
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 					<tr class="table-active">
@@ -121,7 +121,7 @@
 							  </svg>
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 					<tr class="table">
@@ -138,7 +138,7 @@
 							  </svg>
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 				</tbody>
@@ -146,25 +146,25 @@
 			<nav>
 				<ul class="pagination">
 					<li class="page-item">
-						<a class="page-link" href="#">Previous</a>
+						<a class="page-link" href="./sleepHistory.html">Previous</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">1</a>
+						<a class="page-link" href="./sleepHistory.html">1</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">2</a>
+						<a class="page-link" href="./sleepHistory.html">2</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">3</a>
+						<a class="page-link" href="./sleepHistory.html">3</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">4</a>
+						<a class="page-link" href="./sleepHistory.html">4</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">5</a>
+						<a class="page-link" href="./sleepHistory.html">5</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">Next</a>
+						<a class="page-link" href="./sleepHistory.html">Next</a>
 					</li>
 				</ul>
 			</nav>
