--- a/SourceCode_and_Documentation/SettingsAndLogsProto/workoutHistory.html
+++ b/SourceCode_and_Documentation/SettingsAndLogsProto/workoutHistory.html
@@ -22,7 +22,7 @@
 			<ul class="nav nav-pills">
 				<li class="nav-item">
 					<br>
-					<a class="nav-link btn btn-primary" href="#">Dashboard</a>
+					<a class="nav-link btn btn-primary" href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html">Dashboard</a>
 				</li>
 			</ul>
 			<div class="page-header">
@@ -35,8 +35,8 @@
 		</div>
 		<div class="col-md-6">
 			<br>
-			 <a href="#" class="btn btn-info active btn-block" type="button">View Recommendation</a>
-			 <a href="#" class="btn btn-info active btn-block" type="button">Create Goal</a>
+			 <a href="../GoalAndRecommendation/Recommendation/recommendation.html" class="btn btn-info active btn-block" type="button">View Recommendations</a>
+			 <a href="../GoalAndRecommendation/Goal/goal.html" class="btn btn-info active btn-block" type="button">Create Goal</a>
 		</div>
 	</div>
 	<div class="row">
@@ -76,7 +76,7 @@
 							865
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 					<tr class="table-active">
@@ -93,7 +93,7 @@
 							576
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 					<tr class="table">
@@ -110,7 +110,7 @@
 							216
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 					<tr class="table-active">
@@ -127,7 +127,7 @@
 							504
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 					<tr class="table">
@@ -144,7 +144,7 @@
 							576
 						</td>
 						<td>
-							<a href="#" class="btn btn-secondary" type="button">View</a>
+							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
 						</td>
 					</tr>
 				</tbody>
@@ -152,25 +152,25 @@
 			<nav>
 				<ul class="pagination">
 					<li class="page-item">
-						<a class="page-link" href="#">Previous</a>
+						<a class="page-link" href="./workoutHistory.html">Previous</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">1</a>
+						<a class="page-link" href="./workoutHistory.html">1</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">2</a>
+						<a class="page-link" href="./workoutHistory.html">2</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">3</a>
+						<a class="page-link" href="./workoutHistory.html">3</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">4</a>
+						<a class="page-link" href="./workoutHistory.html">4</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">5</a>
+						<a class="page-link" href="./workoutHistory.html">5</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="#">Next</a>
+						<a class="page-link" href="./workoutHistory.html">Next</a>
 					</li>
 				</ul>
 			</nav>
