--- a/SourceCode_and_Documentation/UserInfoProto/signup.html
+++ b/SourceCode_and_Documentation/UserInfoProto/signup.html
@@ -76,10 +76,7 @@
 								</label>
 								<input type="password" class="form-control" id="exampleInputPassword1">
 							</div>
-							
-							<button type="submit" class="btn btn-primary">
-								Submit
-							</button>
+							<a href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html" class="btn btn-primary" role="button" type="submit">Submit and Login</a>
 						</form>
 					</div>
 					<div class="col-md-4">
