--- a/SourceCode_and_Documentation/UserInfoProto/updateStats.html
+++ b/SourceCode_and_Documentation/UserInfoProto/updateStats.html
@@ -24,10 +24,10 @@
 						<nav>
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item">
-									<a href="#">Dashboard</a>
+									<a href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html">Dashboard</a>
 								</li>
 								<li class="breadcrumb-item">
-									<a href="#">Settings</a>
+									<a href="../SettingsAndLogsProto/settings.html">Settings</a>
 								</li>
 								<li class="breadcrumb-item active">
 									Update Your Stats
@@ -74,10 +74,7 @@
 								</label>
 								<input type="email" class="form-control" id="exampleInputEmail1">
 							</div>
-							
-							<button type="submit" class="btn btn-primary">
-								Submit Changes
-							</button>
+							<a href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html" class="btn btn-primary" role="button" type="submit">Submit Changes</a>
 						</form>
 					</div>
 					<div class="col-md-4">
