--- a/SourceCode_and_Documentation/DashboardAndEmailPasswordUpdate/EmailPasswordUpdate/src/update.html
+++ b/SourceCode_and_Documentation/DashboardAndEmailPasswordUpdate/EmailPasswordUpdate/src/update.html
@@ -57,9 +57,7 @@
 							</label>
 							<input type="password" class="form-control" id="exampleInputPassword1">
 						</div>
-						<button type="submit" class="btn btn-primary">
-							Submit
-						</button>
+						<a href="../../../UserInfoProto/signin.html" class="btn btn-primary" role="button" type="submit">Submit</a>
 					</form>
 				</div>
 				<div class="col-md-2">
