--- a/SourceCode_and_Documentation/NewWorkoutsAndSleep/newSleep.html
+++ b/SourceCode_and_Documentation/NewWorkoutsAndSleep/newSleep.html
@@ -76,10 +76,7 @@
 				</div>
 
 				</br>
-					
-				<button type="submit" class="btn btn-light">
-					Submit
-				</button>
+				<a href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html" class="btn btn-primary" role="button" type="submit">Submit</a>  
 			</form>
 		</div>
 		<div class="col-md-4">
