--- a/SourceCode_and_Documentation/NewWorkoutsAndSleep/newWorkout.html
+++ b/SourceCode_and_Documentation/NewWorkoutsAndSleep/newWorkout.html
@@ -64,10 +64,7 @@
                 <h8>
 				</br>
 				</br>
-                  
-				<button type="submit" class="btn btn-light">
-					Submit
-				</button>
+				<a href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html" class="btn btn-primary" role="button" type="submit">Submit</a>  
 			</form>
 		</div>
 		<div class="col-md-4">
