Updated individual sleep

--- a/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html
+++ b/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html
@@ -7,15 +7,24 @@
 
     <title>Sleep Data</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="HalfStack" content="Data from an indiviual sleep">
 
 	
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
   </head>
   <body>
+	<div class="col-md-6">
+		<ul class="nav nav-pills">
+			<li class="nav-item">
+				<br>
+				<a class="nav-link btn btn-primary" href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html">Dashboard</a>
+			</li>
+		</ul>
+	</div>
+
+
   <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
