Updated map.html to have correct css references

--- a/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Map/map.html
+++ b/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Map/map.html
@@ -5,16 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 4, from LayoutIt!</title>
+    <title>Map of Workout</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="HalfStack" content="Map of running workout">
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
   </head>
   <body>
+
+
+	<div class="col-md-6">
+		<ul class="nav nav-pills">
+			<li class="nav-item">
+				<br>
+				<a class="nav-link btn btn-primary" href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html">Dashboard</a>
+			</li>
+		</ul>
+	</div>
 
     <div class="container-fluid">
 	<div class="row">
