--- a/SourceCode_and_Documentation/GoalAndRecommendation/Goal/goal.html
+++ b/SourceCode_and_Documentation/GoalAndRecommendation/Goal/goal.html
@@ -10,21 +10,44 @@
 <form method="post">
   <table>
     <tr>
-      <td align="left" class="label">Description:</td>
-    </tr>
-    <tr>
-      <td align="left" class="input"><textarea name="description" cols="55" rows="10" id="description"></textarea></td>
-    </tr>
-    <tr>
-      <td align="left" class="label">Complete by</td>
+      <td align="left" class="label">Completion Date:</td>
     </tr>
     <tr>
       <td align="left" class="input"><input type="date" name="date" id="date" /></td>
     </tr>
+    <tr>
+      <td align="left" class="label">Total Calories Burnt</td>
+    </tr>
+    <tr>
+      <td align="left" class="input"><input type="text" id="date" name="calories"></td>
+    </tr>
+    <tr>
+      <td align="left" class="label">Total Time Spent</td>
+    </tr>
+    <tr>
+      <td align="left" class="input"><input type="text" id="date" name="calories"></td>
+    </tr>
+    <tr>
+      <td align="left" class="label">Total Distance Travelled</td>
+    </tr>
+    <tr>
+      <td align="left" class="input"><input type="text" id="date" name="calories"></td>
+    </tr>
+    <tr>
+      <td align="left" class="label">Workout Type</td>
+    </tr>
+    <tr>
+      <td align="left" class="input">
+      <select name="cars" id="date">
+        <option value="volvo">Running</option>
+        <option value="saab">Cycling</option>
+      </select>
+      </td>
+    </tr>
   </table>
   </br>
-  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button" id="Cbtn">Cancel</a>
-  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button">Save</a>
+  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button" id="Cbtn">Back</a>
+  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button">Submit</a>
 </form>
 
 </body>
