--- a/SourceCode_and_Documentation/GoalAndRecommendation/Recommendation/recommendation.html
+++ b/SourceCode_and_Documentation/GoalAndRecommendation/Recommendation/recommendation.html
@@ -17,26 +17,44 @@
   <div class="status">Uncompleted</div>
 </div>
 <div class="cols">
-    <div class="col" id="g1">Goal 1: Run 6 km
-    </br>
-    <p class="date" >Complete by: 03/01/2021</p>
-    </br>
-    <p>Run from UNSW to Bondi Beach</p>
-    <a href="./recommendation.html" class="btn" role="button" type="button" id="Dbtn">Delete</a>
+    <div class="col">
+      <div class="col_backup">Goal 1: Run 15 km in total
+      </br>
+      <p class="date" >Complete by: 03/05/2021</p>
+      </br>
+      <a href="./recommendation.html" class="Dbtn" role="button" type="button">Delete</a>
+      </div>
+      <div class="re">
+        Recommendation: Run 6 km
+        </br>
+        <a href="./recommendation.html" class="Dbtn" role="button" type="button">Use</a>
+      </div>
     </div>
-    <div class="col" id="g2">Goal 2: Burn 500 calories 
-    </br>
-    <p class="date">Complete by: 15/03/2021</p>
-    </br>
-    <p>Cycle 16 km</p>
-    <a href="./recommendation.html" class="btn" role="button" type="button" id="Dbtn">Delete</a>
+    <div class="col">
+      <div class="col_backup">Goal 2: Burn 500 calories in total
+      </br>
+      <p class="date">Complete by: 15/05/2021</p>
+      </br>
+      <a href="./recommendation.html" class="Dbtn" role="button" type="button">Delete</a>
+      </div>
+      <div class="re">
+        Recommendation: Cycle 10 km
+        </br>
+        <a href="./recommendation.html" class="Dbtn" role="button" type="button">Use</a>
+      </div>
     </div>
-    <div class="col" id="g3">Goal 3: Burn 300 calories
-    </br>
-    <p class="date">Complete by: 16/02/2021</p>
-    </br>
-    <p>Run 5 km</p>
-    <a href="./recommendation.html" class="btn" role="button" type="button" id="Dbtn">Delete</a>
+    <div class="col">
+      <div class="col_backup">Goal 3: Burn 300 calories in total
+      </br>
+      <p class="date">Complete by: 16/06/2021</p>
+      </br>
+      <a href="./recommendation.html" class="Dbtn" role="button" type="button">Delete</a>
+      </div>
+      <div class="re">
+        Recommendation: Run 10km
+        </br>
+        <a href="./recommendation.html" class="Dbtn" role="button" type="button">Use</a>
+      </div>
     </div>
   </div>
 </body>
