fixed links with updated page styles

--- a/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html
+++ b/SourceCode_and_Documentation/IndividualWorkoutsAndSleep/Individual_Sleep/sleep.html
@@ -19,7 +19,7 @@
 		<ul class="nav nav-pills">
 			<li class="nav-item">
 				<br>
-				<a class="nav-link btn btn-primary" href="../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html">Dashboard</a>
+				<a class="nav-link btn btn-primary" href="../../DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html">Dashboard</a>
 			</li>
 		</ul>
 	</div>
