began updating style consistency

--- a/FullBodyGrin/GoalAndRecommendation/Goal/goal.html
+++ b/FullBodyGrin/GoalAndRecommendation/Goal/goal.html
@@ -46,8 +46,8 @@
     </tr>
   </table>
   </br>
-  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button" id="Cbtn">Back</a>
-  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button">Submit</a>
+  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" id="Cbtn" style="text-decoration: none;">Back</a>
+  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" style="text-decoration: none;">Submit</a>
 </form>
 
 </body>
