--- a/FullBodyGrin/SettingsAndLogsProto/settings.html
+++ b/FullBodyGrin/SettingsAndLogsProto/settings.html
@@ -8,7 +8,7 @@
     <title>Settings</title>
 
     <meta name="description" content="Settings">
-    <meta name="author" content="HalfStack!">
+    <meta name="author" content="HalfStack">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
