--- a/FullBodyGrin/SettingsAndLogsProto/workoutHistory.html
+++ b/FullBodyGrin/SettingsAndLogsProto/workoutHistory.html
@@ -35,8 +35,8 @@
 		</div>
 		<div class="col-md-6">
 			<br>
-			 <a href="../GoalAndRecommendation/Recommendation/recommendation.html" class="btn btn-info active btn-block" type="button">View Recommendations</a>
-			 <a href="../GoalAndRecommendation/Goal/goal.html" class="btn btn-info active btn-block" type="button">Create Goal</a>
+			 <a href="../GoalAndRecommendation/Recommendation/recommendation.html" class="btn btn-info active btn-block" type="button">View Goals and Recommendations</a>
+			 <a href="../GoalAndRecommendation/Goal/goal.html" class="btn btn-info active btn-block" type="button">Create New Goal</a>
 		</div>
 	</div>
 	<div class="row">
