--- a/FullBodyGrin/UserInfoProto/signin.html
+++ b/FullBodyGrin/UserInfoProto/signin.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Sign In Page</title>
+    <title>Sign In</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="description" content="Sign In">
+    <meta name="author" content="HalfStack">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -66,14 +66,14 @@
 							Don't have an account?
 						</p>
 						<p>
-							<a class="btn" href="signup.html"><u>Sign up</u></a>
+							<a class="btn btn-secondary" role="button" href="signup.html">Sign up</a>
 						</p>
 
 						<p>
 							Forgot your password?
 						</p>
 						<p>
-							<a class="btn" href="../DashboardAndEmailPasswordUpdate/EmailPasswordUpdate/src/update.html"><u>Recover password</u></a>
+							<a class="btn btn-secondary" role="button" href="../DashboardAndEmailPasswordUpdate/EmailPasswordUpdate/src/update.html">Recover password</a>
 						</p>
 						</div>
 					<div class="col-md-4">
