--- a/FullBodyGrin/DashboardAndEmailPasswordUpdate/EmailPasswordUpdate/src/update.html
+++ b/FullBodyGrin/DashboardAndEmailPasswordUpdate/EmailPasswordUpdate/src/update.html
@@ -7,8 +7,8 @@
 
     <title>Update Email and Password</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="description" content="Update Email and Password">
+    <meta name="author" content="HalfStack">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
