--- a/FullBodyGrin/GoalAndRecommendation/Recommendation/recommendation.html
+++ b/FullBodyGrin/GoalAndRecommendation/Recommendation/recommendation.html
@@ -8,52 +8,55 @@
 
 <h1>Workout Recommendations</h1>
 <div id="top">
-  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button" id="Bbtn">Back</a>
+  <a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn" role="button" type="button" id="Bbtn" style="text-decoration: none;">Back</a>
   <div class="color" id="firstC"></div>
   <div class="status">Completed</div>
   <div class="color" id="secondC"></div>
-  <div class="status">Need to be completed</div>
+  <div class="status">In Progress</div>
   <div class="color" id="thirdC"></div>
-  <div class="status">Uncompleted</div>
+  <div class="status">Not Yet Started</div>
 </div>
 <div class="cols">
     <div class="col">
-      <div class="col_backup">Goal 1: Run 15 km in total
+      <div class="col_backup">Goal 1: Run 15km
       </br>
       <p class="date" >Complete by: 03/05/2021</p>
       </br>
-      <a href="./recommendation.html" class="Dbtn" role="button" type="button">Delete</a>
+      <a href="./recommendation.html" class="Dbtn" role="button" type="button" style="text-decoration: none;">Delete</a>
       </div>
       <div class="re">
-        Recommendation: Run 6 km
+        Recommendation: Run 6km
         </br>
-        <a href="./recommendation.html" class="Dbtn" role="button" type="button">Use</a>
+        </br>
+        <a href="./recommendation.html" class="Dbtn" role="button" type="button" style="text-decoration: none;">Use</a>
       </div>
     </div>
     <div class="col">
-      <div class="col_backup">Goal 2: Burn 500 calories in total
+      <div class="col_backup">Goal 2: Burn 500 calories
       </br>
       <p class="date">Complete by: 15/05/2021</p>
       </br>
-      <a href="./recommendation.html" class="Dbtn" role="button" type="button">Delete</a>
+      <a href="./recommendation.html" class="Dbtn" role="button" type="button" style="text-decoration: none;">Delete</a>
       </div>
       <div class="re">
-        Recommendation: Cycle 10 km
+        Recommendation: Cycle 8km
         </br>
-        <a href="./recommendation.html" class="Dbtn" role="button" type="button">Use</a>
+        </br>
+        <a href="./recommendation.html" class="Dbtn" role="button" type="button" style="text-decoration: none;">Use</a>
       </div>
     </div>
     <div class="col">
-      <div class="col_backup">Goal 3: Burn 300 calories in total
+      <div class="col_backup">Goal 3: Burn 300 calories
       </br>
       <p class="date">Complete by: 16/06/2021</p>
       </br>
-      <a href="./recommendation.html" class="Dbtn" role="button" type="button">Delete</a>
+      <a href="./recommendation.html" class="Dbtn" role="button" type="button" style="text-decoration: none;">Delete</a>
       </div>
       <div class="re">
         Recommendation: Run 10km
         </br>
-        <a href="./recommendation.html" class="Dbtn" role="button" type="button">Use</a>
+        </br>
+        <a href="./recommendation.html" class="Dbtn" role="button" type="button" style="text-decoration: none;">Use</a>
       </div>
     </div>
   </div>
