--- a/FullBodyGrin/UserInfoProto/updateStats.html
+++ b/FullBodyGrin/UserInfoProto/updateStats.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Update your Stats</title>
+    <title>Update Stats</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="description" content="Update Stats">
+    <meta name="author" content="HalfStack">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
