All pages consistent and links working 100%

--- a/FullBodyGrin/DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html
+++ b/FullBodyGrin/DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html
@@ -131,9 +131,7 @@
 					</p>
 				</div>
 				<div class="card-footer">
-					<div>
-						<span>😀</span>
-					</div>
+					5.1km 1hr 5mins
 				</div>
 			</div>
 			<div class="card text-white bg-info">
@@ -146,9 +144,7 @@
 					</p>
 				</div>
 				<div class="card-footer">
-					<div>
-						<span>😑</span>
-					</div>
+					5.9km 34mins
 				</div>
 			</div>
 			<a href="../../../SettingsAndLogsProto/workoutHistory.html" class="btn btn-block btn-outline-info" role="button">Show All</a>
