--- a/FullBodyGrin/NewWorkoutsAndSleep/newSleep.html
+++ b/FullBodyGrin/NewWorkoutsAndSleep/newSleep.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 4, from LayoutIt!</title>
+    <title>New Sleep</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="description" content="New Sleep">
+    <meta name="author" content="HalfStack">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -45,33 +45,33 @@
 				</div>
 
 				<h4 class="text-center">
-					Sleep Quality
+					How are you feeling today?
 				<h4>
 				
 				<div class="col text-center">
 				<input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" >
 				<label class="btn bg-transparent" for="option1">
-					<img src=faces/1.png width="50" />
+					<img src=faces/1.png width="40" />
 				</label>
 
 				<input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
 				<label class="btn bg-transparent" for="option2">
-					<img src=faces/2.png width="50" />
+					<img src=faces/2.png width="40" />
 				</label>
 
 				<input type="radio" class="btn-check" name="options" id="option3" autocomplete="off">
 				<label class="btn bg-transparent" for="option3">
-					<img src=faces/3.png width="50" />
+					<img src=faces/3.png width="40" />
 				</label>
 
 				<input type="radio" class="btn-check" name="options" id="option4" autocomplete="off">
 				<label class="btn bg-transparent" for="option4">
-					<img src=faces/4.png width="50" />
+					<img src=faces/4.png width="40" />
 				</label>
 
 				<input type="radio" class="btn-check" name="options" id="option5" autocomplete="off">
 				<label class="btn bg-transparent" for="option4">
-					<img src=faces/5.png width="50" />
+					<img src=faces/5.png width="40" />
 				</label>
 				</div>
 
