--- a/FullBodyGrin/PlanWorkouts/data.html
+++ b/FullBodyGrin/PlanWorkouts/data.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Workout Data</title>
+    <title>Upcoming Workout Data</title>
 
-    <meta name="HalfStack" content="Data from workout">
+    <meta name="HalfStack" content="Upcoming Workout Data">
 
     <link href="css1/bootstrap.min.css" rel="stylesheet">
     <link href="css1/style.css" rel="stylesheet">
@@ -72,15 +72,15 @@
 			</div>
 			
 		</div>
-		<a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn btn-primary" role="button">Back</a>
+		<a href="./viewPlanned.html" class="btn btn-primary" role="button">Back</a>
 		<div>
-			<button type="button" id="editb" class="btn">Edit</button>
+			<button class="btn btn-secondary" type="button" id="editb">Edit</button>
 		</div>
         <div>
-			<button type="button" id="cancelb" class="btn">Cancel</button>
+			<button type="button" id="cancelb" class="btn btn-danger">Cancel</button>
 		</div>
         <div>
-			<button type="button" id="saveb" class="btn">Save</button>
+			<button type="button" id="saveb" class="btn btn-primary">Save</button>
 		</div>
 	</div>
 	<div id="myModal1" class="modal">
@@ -98,7 +98,7 @@
 		<div class="modal-content">
 		  <span class="close2">&times;</span>
 		  <p id="modalText2">Do you want to discard changes?</p>
-          <button type="button" id="discardb" class="btn">Discard</button>
+          <button type="button" id="discardb" class="btn btn-danger">Discard</button>
 		</div>
 	  
 	</div>
