--- a/FullBodyGrin/PlanWorkouts/viewPlanned.html
+++ b/FullBodyGrin/PlanWorkouts/viewPlanned.html
@@ -7,7 +7,7 @@
 
     <title>Upcoming Workouts</title>
 
-    <meta name="description" content="Workout Log">
+    <meta name="description" content="Upcoming Workouts">
     <meta name="author" content="HalfStack">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +51,7 @@
 			</select>
 		</div>
 		<div class="search_bar">
-			<button type="button" id="searchBtn">Search</button>
+			<a class="btn btn-primary" href="./viewPlanned.html" id="searchBtn" type="button">Search</a>
 		</div>
 	</div>
 	<div class="row">
@@ -96,11 +96,8 @@
 						<td>
 							865
 						</td>
-						<td>
-							<a href="./data.html" class="btn btn-secondary" type="button">View</a>
-						</td>
                         <td>
-							<a href="./data.html" class="btn btn-secondary" type="button">Complete</a>
+							<a href="./data.html" class="btn btn-secondary" type="button">View/Complete</a>
 						</td>
 					</tr>
 					<tr class="table-active">
@@ -119,11 +116,8 @@
 						<td>
 							576
 						</td>
-						<td>
-							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
-						</td>
                         <td>
-							<a href="./data.html" class="btn btn-secondary" type="button">Complete</a>
+							<a href="./data.html" class="btn btn-secondary" type="button">View/Complete</a>
 						</td>
 					</tr>
 					<tr class="table">
@@ -142,11 +136,8 @@
 						<td>
 							216
 						</td>
-						<td>
-							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
-						</td>
                         <td>
-							<a href="./data.html" class="btn btn-secondary" type="button">Complete</a>
+							<a href="./data.html" class="btn btn-secondary" type="button">View/Complete</a>
 						</td>
 					</tr>
 					<tr class="table-active">
@@ -165,11 +156,8 @@
 						<td>
 							504
 						</td>
-						<td>
-							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
-						</td>
                         <td>
-							<a href="./data.html" class="btn btn-secondary" type="button">Complete</a>
+							<a href="./data.html" class="btn btn-secondary" type="button">View/Complete</a>
 						</td>
 					</tr>
 					<tr class="table">
@@ -188,11 +176,8 @@
 						<td>
 							576
 						</td>
-						<td>
-							<a href="../IndividualWorkoutsAndSleep/Individual_Run/run.html" class="btn btn-secondary" type="button">View</a>
-						</td>
                         <td>
-							<a href="./data.html" class="btn btn-secondary" type="button">Complete</a>
+							<a href="./data.html" class="btn btn-secondary" type="button">View/Complete</a>
 						</td>
 					</tr>
 				</tbody>
@@ -200,25 +185,25 @@
 			<nav>
 				<ul class="pagination">
 					<li class="page-item">
-						<a class="page-link" href="./workoutHistory.html">Previous</a>
+						<a class="page-link" href="./viewPlanned.html">Previous</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="./workoutHistory.html">1</a>
+						<a class="page-link" href="./viewPlanned.html">1</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="./workoutHistory.html">2</a>
+						<a class="page-link" href="./viewPlanned.html">2</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="./workoutHistory.html">3</a>
+						<a class="page-link" href="./viewPlanned.html">3</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="./workoutHistory.html">4</a>
+						<a class="page-link" href="./viewPlanned.html">4</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="./workoutHistory.html">5</a>
+						<a class="page-link" href="./viewPlanned.html">5</a>
 					</li>
 					<li class="page-item">
-						<a class="page-link" href="./workoutHistory.html">Next</a>
+						<a class="page-link" href="./viewPlanned.html">Next</a>
 					</li>
 				</ul>
 			</nav>
