--- a/FullBodyGrin/IndividualWorkoutsAndSleep/Individual_Map/map.html
+++ b/FullBodyGrin/IndividualWorkoutsAndSleep/Individual_Map/map.html
@@ -7,7 +7,7 @@
 
     <title>Map of Workout</title>
 
-    <meta name="HalfStack" content="Map of running workout">
+    <meta name="HalfStack" content="Map of workout">
 
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -45,7 +45,7 @@
 				</div>
 				<div class="col-md-2">
 					<div class="buffer">
-						<a href="../Individual_Run/run.html" class="btn btn-success" role="button">Go Back</a>
+						<a href="../Individual_Run/run.html" class="btn btn-primary" role="button">Go Back</a>
 					</div>
 					
 				</div>
