--- a/FullBodyGrin/IndividualWorkoutsAndSleep/Individual_Run/run.html
+++ b/FullBodyGrin/IndividualWorkoutsAndSleep/Individual_Run/run.html
@@ -64,8 +64,9 @@
 			</div>
 			
 		</div>
-		<a href="../Individual_Map/map.html" class="btn btn-primary" role="button">Map</a>
 		<a href="../../SettingsAndLogsProto/workoutHistory.html" class="btn btn-primary" role="button">Back</a>
+		
+		<a href="../Individual_Map/map.html" class="btn btn-secondary" role="button">Map</a>
 	</div>
 </div>
 
