--- a/FullBodyGrin/PlanWorkouts/plan.html
+++ b/FullBodyGrin/PlanWorkouts/plan.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 4, from LayoutIt!</title>
+    <title>Plan New Workout</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="description" content="Plan New Workout">
+    <meta name="author" content="HalfStack">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -74,7 +74,7 @@
                 <h8>
 				</br>
 				</br>
-				<button type="button" id="modalBtn" class="btn">Submit</button>  
+				<button type="button" id="modalBtn" class="btn btn-primary">Submit</button>  
 			</form>
 		</div>
 		<div class="col-md-4">
@@ -87,7 +87,7 @@
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close">&times;</span>
-      <p id="modalText">A new goal is created successfully!</p>
+      <p id="modalText">New workout created successfully!</p>
     </div>
     
 </div>
