--- a/FullBodyGrin/SettingsAndLogsProto/sleepHistory.html
+++ b/FullBodyGrin/SettingsAndLogsProto/sleepHistory.html
@@ -8,7 +8,7 @@
     <title>Sleep Log</title>
 
     <meta name="description" content="Sleep Log">
-    <meta name="author" content="HalfStack!">
+    <meta name="author" content="HalfStack">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -45,7 +45,7 @@
 						</th>
 						</th>
 						<th>
-							Time In Bed
+							Time Asleep
 						</th>
 						<th>
 							Sleep Quality
