Added proper smileys to dashboard

--- a/FullBodyGrin/DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html
+++ b/FullBodyGrin/DashboardAndEmailPasswordUpdate/Dashboard/src/dashboard.html
@@ -167,7 +167,7 @@
 				</div>
 				<div class="card-footer">
 					<div>
-						<span>🙂</span>
+						<img src=faces/5.png width="20" />
 					</div>
 				</div>
 			</div>
@@ -182,7 +182,7 @@
 				</div>
 				<div class="card-footer">
 					<div>
-						<span>😑</span>
+						<img src=faces/3.png width="20" />
 					</div>
 				</div>
 			</div>
